hot(services) hot the title card problem

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </p>
             </article>
             
-            <!-- Carte 2 - mid with hover effect -->
+            <!-- Card 2 -->
             <article class="services__card services__card--featured">
                 <div class="services__card__icon services__card__icon--code">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -78,7 +78,7 @@
                         <path d="M8 6L2 12L8 18" stroke="#9333EA" stroke-width="2" stroke-linecap="round"/>
                     </svg>
                 </div>
-                <h3 class="services__card__title services__card__title--featured">Web Design & Development</h3>
+                <h3 class="services__card__title">Web Design & Development</h3>
                 <p class="services__card__text">
                     A Website is an extension of yourself and we can help you to express it properly. Your website is your number one marketing asset because we live in a digital age.
                 </p>
