Feat(section) add leading companies section

--- a/index.html
+++ b/index.html
@@ -195,6 +195,39 @@
           </div>
         </div>
       </section>
+      <!-- Section Leading Companies -->
+      <section class="leading-companies">
+          <img src="img/Ellipse.png" alt="" class="leading-companies__ellipse leading-companies__ellipse--top">
+          <div class="container">
+              <div class="leading-companies__content">
+                  <div class="leading-companies__text">
+                      <div class="leading-companies__decoration"></div>
+                      <h2 class="leading-companies__title">
+                          Leading companies trust us<br>
+                          <span class="leading-companies__title--highlight">to develop software</span>
+                      </h2>
+                      <p class="leading-companies__description">
+                          We <span class="leading-companies__highlight-text">add development capacity</span> to tech teams. Our value isn't limited to building teams but is equally distributed across the project lifecycle. We are a custom software development company that guarantees the successful delivery of your project.
+                      </p>
+                      <a href="#" class="leading-companies__link">
+                          See more Informations
+                          <span class="leading-companies__link__arrow">→</span>
+                      </a>
+                  </div>
+                  <div class="leading-companies__video">
+                      <img src="img/Abou-us-Video.png" alt="Our team working together" class="leading-companies__video__img">
+                      <button class="leading-companies__video__play" aria-label="Play video">
+                          <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
+                              ircle cx="30" cy="30" r="30" fill="#9333EA"/>
+                              <path d="M24 20L40 30L24 40V20Z" fill="white"/>
+                          </svg>
+                      </button>
+                  </div>
+              </div>
+            </div>
+          <img src="img/Ellipse.png" alt="" class="leading-companies__ellipse leading-companies__ellipse--bottom">
+      </section>
+
     </main>
   </body>
 </html>
