feat+hot(add customer feedback section

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <!-- Section Leading Companies -->
       <section class="leading-companies">
         <img src="img/Ellipse.png" alt="" class="leading-companies__ellipse leading-companies__ellipse--top">
-        <div class="container">
+        <div class="leading-companies__container">
           <div class="leading-companies__content">
             <div class="leading-companies__text">
               <div class="leading-companies__decoration"></div>
@@ -258,6 +258,65 @@
           </div>
             <img src="img/Ellipse.png" alt="" class="meet-people__ellipse">
         </div>
+      </section>
+     <!-- Section Customer Feedbacks -->
+      <section class="customer-feedbacks">
+        <div class="container">
+          <div class="customer-feedbacks__decoration"></div>
+          <h2 class="customer-feedbacks__title">
+            Why customers love<br>
+            <strong>working with us</strong>
+          </h2>       
+          <div class="customer-feedbacks__testimonial">
+            <span class="customer-feedbacks__quote customer-feedbacks__quote--left">"</span>
+            <p class="customer-feedbacks__text">
+                Without any doubt I recommend Alcaline Solutions as one of the best web design and digital marketing agencies. One of the best agencies I've came across so far. Wouldn't be hesitated to introduce their work to someone else.
+            </p>
+            <span class="customer-feedbacks__quote customer-feedbacks__quote--right">"</span>
+          </div>
+          <div class="customer-feedbacks__clients">
+            <div class="customer-feedbacks__client">
+              <img src="img/partner_feedback/part1.svg" alt="Romeena De Silva" class="customer-feedbacks__client__avatar">
+              <div class="customer-feedbacks__client__stars">★★★★★</div>
+              <p class="customer-feedbacks__client__name">Romeena De Silva</p>
+              <p class="customer-feedbacks__client__role">Janet Cosmetics</p>
+            </div> 
+            <div class="customer-feedbacks__client">
+              <img src="img/partner_feedback/part2.svg" alt="Imran Khan" class="customer-feedbacks__client__avatar">
+              <div class="customer-feedbacks__client__stars">★★★★★</div>
+              <p class="customer-feedbacks__client__name">Imran Khan</p>
+              <p class="customer-feedbacks__client__role">Software Engineer</p>
+            </div>  
+            <div class="customer-feedbacks__client customer-feedbacks__client--active">
+                <img src="img/partner_feedback/part3.svg" alt="Imran Khan" class="customer-feedbacks__client__avatar">
+                <div class="customer-feedbacks__client__stars">★★★★★</div>
+                <p class="customer-feedbacks__client__name">Imran Khan</p>
+                <p class="customer-feedbacks__client__role">Software Engineer</p>
+            </div>
+            <div class="customer-feedbacks__client">
+                <img src="img/partner_feedback/part4.svg" alt="Romeena De Silva" class="customer-feedbacks__client__avatar">
+                <div class="customer-feedbacks__client__stars">★★★★★</div>
+                <p class="customer-feedbacks__client__name">Romeena De Silva</p>
+                <p class="customer-feedbacks__client__role">Janet Cosmetics</p>
+            </div>
+            <div class="customer-feedbacks__client">
+                <img src="img/partner_feedback/part5.svg" alt="Romeena De Silva" class="customer-feedbacks__client__avatar">
+                <div class="customer-feedbacks__client__stars">★★★★★</div>
+                <p class="customer-feedbacks__client__name">Romeena De Silva</p>
+                <p class="customer-feedbacks__client__role">Janet Cosmetics</p>
+            </div>
+          </div>
+        </div>
+        <button class="customer-feedbacks__nav customer-feedbacks__nav--prev" aria-label="Previous">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+            <circle cx="12" cy="12" r="11" stroke="#9333EA" stroke-width="2"/>
+            <path d="M13 8L9 12L13 16" stroke="#9333EA" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+        </button>
+        <button class="customer-feedbacks__nav customer-feedbacks__nav--next" aria-label="Next">
+          <circle cx="12" cy="12" r="11" fill="#9333EA"/>
+          <path d="M11 8L15 12L11 16" stroke="#FFFFFF" stroke-width="2" stroke-linecap="round"/>
+        </button>
       </section>
     </main>
   </body>
