feat(new section) add case studies section

--- a/index.html
+++ b/index.html
@@ -318,6 +318,55 @@
           <path d="M11 8L15 12L11 16" stroke="#FFFFFF" stroke-width="2" stroke-linecap="round"/>
         </button>
       </section>
+      <!-- see for the transition with arrow later -->
+       <section class="case-studies">
+        <div class="container">
+        <div class="case-studies__decoration"></div>
+        <h2 class="case-studies__title">
+            Our recent<br>
+            <strong>Case studies</strong>
+        </h2>
+        <article class="case-studies__card case-studies__card--blue">
+            <div class="case-studies__mockups">
+                <img src="img/article/Case-study__image1.svg" alt="SCFC Canada mockups" class="case-studies__mockup-image">
+            </div>
+            <div class="case-studies__content">
+                <h3 class="case-studies__card-title">Website Design for SCFC Canada</h3>
+                <p class="case-studies__card-text">
+                    Born out of a vision, a single-minded objective that puts service before anything else, Swift Clearance and Forwarding Corp. surging forth to deliver the best services in the shipping and logistics scenario. Its meteoric rise stems out of a solid foundation. The management boasts of over 20 years of rich and varied experience in the shipping and freight forwarding industry.
+                </p>
+                <a href="#" class="case-studies__link">Read more →</a>
+            </div>
+        </article>
+        <article class="case-studies__card case-studies__card--green">
+            <div class="case-studies__mockups">
+                <img src="img/article/Case-study__image2.svg" alt="SCFC Canada mockups" class="case-studies__mockup-image">
+            </div>
+            <div class="case-studies__content">
+                <h3 class="case-studies__card-title">Website Design for SCFC Canada</h3>
+                <p class="case-studies__card-text">
+                    Born out of a vision, a single-minded objective that puts service before anything else, Swift Clearance and Forwarding Corp. surging forth to deliver the best services in the shipping and logistics scenario. Its meteoric rise stems out of a solid foundation. The management boasts of over 20 years of rich and varied experience in the shipping and freight forwarding industry.
+                </p>
+                <a href="#" class="case-studies__link">Read more →</a>
+            </div>
+        </article>
+        <article class="case-studies__card case-studies__card--pink">
+            <div class="case-studies__mockups">
+                <img src="img/article/Case-study__image3.svg" alt="SCFC Canada mockups" class="case-studies__mockup-image">
+            </div>
+            <div class="case-studies__content">
+                <h3 class="case-studies__card-title">Website Design for SCFC Canada</h3>
+                <p class="case-studies__card-text">
+                    Born out of a vision, a single-minded objective that puts service before anything else, Swift Clearance and Forwarding Corp. surging forth to deliver the best services in the shipping and logistics scenario. Its meteoric rise stems out of a solid foundation. The management boasts of over 20 years of rich and varied experience in the shipping and freight forwarding industry.
+                </p>
+                <a href="#" class="case-studies__link">Read more →</a>
+            </div>
+          </article>
+        </div>
+        <div class="case-studies__view-more-wrapper">
+          <a href="#" class="case-studies__view-more">Read more case studies →</a>
+        </div>
+      </section>
     </main>
   </body>
 </html>
