hot(building-software) add responsive + fix padding

--- a/index.html
+++ b/index.html
@@ -369,94 +369,78 @@
         </div>
       </section>
       <section class="building-software">
-        <div class="building-software__container">
-        <div class="building-software__decoration"></div>
-        <h2 class="building-software__title">
+        <div class="container">
+          <div class="building-software__decoration"></div>
+          <h2 class="building-software__title">
             Way of building<br>
             <strong>Great Software</strong>
-        </h2>
+          </h2>        
         <!-- Card 1 -->
-        <article class="building-software__card building-software__card--right">
+          <div class="building-software__card">
             <div class="building-software__content">
-                <h3 class="building-software__card-title">Build the right team to scale</h3>
-                <p class="building-software__card-text">
-                    Finding the right talent is not easy. We help you find the talent that suits your needs, follows your processes, and sticks with you long term (not the case with freelancers
-                </p>
-                <p class="building-software__card-text">
-                    Our <a href="#" class="building-software__link">delivery model</a> helps you cut costs and deliver within budget.
-                </p>
+                <h3>Build the right team to scale</h3>
+                <p>Finding the right talent is not easy. We help you find the talent that suits your needs, follows your processes, and sticks with you long term (not the case with freelancers</p>
+                <p>Our <a href="#">delivery model</a> helps you cut costs and deliver within budget.</p>                
                 <blockquote class="building-software__quote">
                     <p>"Simform is quick to identify larger problem with the Software so we decided to expand our scope to build new modules"</p>
                     <div class="building-software__author">
-                      <img src="img/article/Jeewa1.svg" alt="Jeeva markram" class="building-software__avatar">
-                      <div class="building-software__author-info">
-                          <p class="building-software__author-name">Jeeva markram</p>
-                          <p class="building-software__author-title">CEO</p>
+                      <img src="img/article/Jeewa1.svg" alt="Jeeva markram">
+                      <div>
+                        <p class="name">Jeeva markram</p>
+                        <p class="title">CEO</p>
                       </div>
-                    </div>
-                </blockquote>
-            </div>
-            <div class="building-software__image-wrapper">
-                <img src="img/article/work__sofa.svg" alt="Team meeting" class="building-software__image">
-                <img src="img/Ellipse_yellow.png" alt="" class="building-software__ellipse building-software__ellipse--yellow">
-                <img src="img/Ellipse.png" alt="" class="building-software__ellipse building-software__ellipse--pink">
-            </div>
-        </article>
-        <!-- Card 2 -->
-        <article class="building-software__card building-software__card--left">
-            <div class="building-software__image-wrapper">
-                <img src="img/article/work__desk.svg" alt="Developers working" class="building-software__image">
-                <img src="img/Ellipse_yellow.png" alt="" class="building-software__ellipse building-software__ellipse--yellow-2">
-                <img src="img/Ellipse.png" alt="" class="building-software__ellipse building-software__ellipse--pink-2">
-            </div>
-            <div class="building-software__content">
-                <h3 class="building-software__card-title">Build the right team to scale</h3>
-                <p class="building-software__card-text">
-                    Finding the right talent is not easy. We help you find the talent that suits your needs, follows your processes, and sticks with you long term (not the case with freelancers
-                </p>
-                <p class="building-software__card-text">
-                    Our <a href="#" class="building-software__link">delivery model</a> helps you cut costs and deliver within budget.
-                </p>                
-                <blockquote class="building-software__quote">
-                  <p>"Simform is quick to identify larger problem with the Software so we decided to expand our scope to build new modules"</p>
-                  <div class="building-software__author">
-                    <img src="img/article/jeewa2.svg" alt="Jeeva markram" class="building-software__avatar">
-                    <div class="building-software__author-info">
-                        <p class="building-software__author-name">Jeeva markram</p>
-                        <p class="building-software__author-title">CEO</p>
-                    </div>
                   </div>
-                </blockquote>
-            </div>
-        </article>
-        <!-- Card 3 -->
-        <article class="building-software__card building-software__card--right">
-            <div class="building-software__content">
-                <h3 class="building-software__card-title">Build the right team to scale</h3>
-                <p class="building-software__card-text">
-                    Finding the right talent is not easy. We help you find the talent that suits your needs, follows your processes, and sticks with you long term (not the case with freelancers
-                </p>
-                <p class="building-software__card-text">
-                    Our <a href="#" class="building-software__link">delivery model</a> helps you cut costs and deliver within budget.
-                </p>               
-                <blockquote class="building-software__quote">
-                  <p>"Simform is quick to identify larger problem with the Software so we decided to expand our scope to build new modules"</p>
-                  <div class="building-software__author">
-                      <img src="img/article/jeewa3.svg" alt="Jeeva markram" class="building-software__avatar">
-                      <div class="building-software__author-info">
-                      <p class="building-software__author-name">Jeeva markram</p>
-                      <p class="building-software__author-title">CEO</p>
-                    </div>
-                  </div>
-                </blockquote>
-            </div>            
-            <div class="building-software__image-wrapper">
-                <img src="img/article/brainstorming.svg" alt="Office space" class="building-software__image">
-                <img src="img/Ellipse.png" alt="" class="building-software__ellipse building-software__ellipse--pink-3">
-            </div>
-          </article>
+              </blockquote>
+          </div>          
+          <div class="building-software__image">
+            <img src="img/article/work__sofa.svg" alt="Team meeting">
+          </div>
         </div>
-      </section>
+        
+        <!-- Card 2 -->
+        <div class="building-software__card building-software__card--reverse">
+            <div class="building-software__content">
+                <h3>Build the right team to scale</h3>
+                <p>Finding the right talent is not easy. We help you find the talent that suits your needs, follows your processes, and sticks with you long term (not the case with freelancers</p>
+                <p>Our <a href="#">delivery model</a> helps you cut costs and deliver within budget.</p>               
+                  <blockquote class="building-software__quote">
+                    <p>"Simform is quick to identify larger problem with the Software so we decided to expand our scope to build new modules"</p>
+                    <div class="building-software__author">
+                     <img src="img/article/jeewa2.svg" alt="Jeeva markram">
+                      <div>
+                          <p class="name">Jeeva markram</p>
+                          <p class="title">CEO</p>
+                      </div>
+                  </div>
+              </blockquote>
+          </div>  
+            <div class="building-software__image">
+              <img src="img/article/work__desk.svg" alt="Developers">
+            </div>
+        </div>
+        <!-- Card 3 -->
+        <div class="building-software__card">
+            <div class="building-software__content">
+              <h3>Build the right team to scale</h3>
+              <p>Finding the right talent is not easy. We help you find the talent that suits your needs, follows your processes, and sticks with you long term (not the case with freelancers</p>
+              <p>Our <a href="#">delivery model</a> helps you cut costs and deliver within budget.</p>              
+              <blockquote class="building-software__quote">
+                <p>"Simform is quick to identify larger problem with the Software so we decided to expand our scope to build new modules"</p>
+                  <div class="building-software__author">
+                       <img src="img/article/jeewa3.svg" alt="Jeeva markram">
+                    <div>
+                        <p class="name">Jeeva markram</p>
+                        <p class="title">CEO</p>
+                    </div>
+                  </div>
+                </blockquote>
+              </div>           
+              <div class="building-software__image">
+                <img src="img/article/brainstorming.svg" alt="Office">
+              </div>
+            </div>
+          </div>
+        </section>
     </main>
   </body>
 </html>
