feat(add) add develop approach section !

--- a/index.html
+++ b/index.html
@@ -441,6 +441,72 @@
             </div>
           </div>
         </section>
+        <section class="approach">
+    <div class="container">
+        <div class="approach__decoration"></div>
+        <h2 class="approach__title">
+            Our design and<br>
+            <strong>development approach</strong>
+        </h2>        
+        <!-- flexbox cards -->
+          <div class="approach__cards">
+            <div class="approach__card">
+                <div class="approach__icon">
+                    <img src="img/article/rocket.svg" alt="UX Icon rocket for the winners">
+                </div>
+                <div class="approach__content">
+                    <h3>UX Driven Engineering</h3>
+                    <p>Unlike other companies, we are a <strong>UX first</strong> development company. Projects are driven by designers and they make sure design and experiences translate to code.</p>
+                </div>
+              </div>            
+              <div class="approach__card">
+                <div class="approach__icon">
+                    <img src="img/article/code.svg" alt="Understanding Icon code for developers">
+                </div>
+                <div class="approach__content">
+                    <h3>Developing Shared Understanding</h3>
+                    <p>Unlike other companies, we are a <strong>UX first</strong> development company. Projects are driven by designers and they make sure design and experiences translate to code.</p>
+                </div>
+              </div>            
+              <div class="approach__card">
+                <div class="approach__icon">
+                  <img src="img/article/pink__heartrate.svg" alt="Experience Icon heartrate for the runners">
+                </div>
+                <div class="approach__content">
+                    <h3>Proven Experience and Expertise</h3>
+                    <p>Unlike other companies, we are a <strong>UX first</strong> development company. Projects are driven by designers and they make sure design and experiences translate to code.</p>
+                </div>
+              </div>            
+              <div class="approach__card">
+                <div class="approach__icon">
+                  <img src="img/article/green__shield.svg" alt="Security Icon shield for the gamers">
+                </div>
+                <div class="approach__content">
+                  <h3>Security & Intellectual Property (IP)</h3>
+                  <p>Unlike other companies, we are a <strong>UX first</strong> development company. Projects are driven by designers and they make sure design and experiences translate to code.</p>
+                </div>
+              </div>            
+              <div class="approach__card">
+                <div class="approach__icon">
+                  <img src="img/article/Yellow__ok.svg" alt="Code Review Icon ok for the undestand-boys (and girls)">
+                </div>
+                <div class="approach__content">
+                  <h3>Code Reviews</h3>
+                  <p>Unlike other companies, we are a <strong>UX first</strong> development company. Projects are driven by designers and they make sure design and experiences translate to code.</p>
+                </div>
+              </div>            
+              <div class="approach__card">
+                <div class="approach__icon">
+                  <img src="img/article/violet__padlock.svg" alt="QA Icon for the secret of the hidden world (i'm a secret world game fan)">
+                </div>
+                <div class="approach__content">
+                  <h3>Quality Assurance & Testing</h3>
+                  <p>Unlike other companies, we are a <strong>UX first</strong> development company. Projects are driven by designers and they make sure design and experiences translate to code.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
