feat(add+hot) add Our tech stack section + hot this fucking top ball and other little things

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
             </div>
           </div>
         </div>
+        <img src="img/Ellipse.png" alt="" class="services__ellipse" />
       </section>
     </header>
     <main>
       <!-- Section Services -->
       <section class="services">
-        <img src="img/Ellipse.png" alt="" class="services__ellipse" />
         <div class="container">
           <h2 class="services__title">Services we offer</h2>
           <div class="services__grid">
@@ -368,6 +368,7 @@
           <a href="#" class="case-studies__view-more">Read more case studies →</a>
         </div>
       </section>
+      <!-- Section Building-software -->
       <section class="building-software">
         <div class="container">
           <div class="building-software__decoration"></div>
@@ -441,8 +442,9 @@
             </div>
           </div>
         </section>
+        <!-- Section our approach -->
         <section class="approach">
-    <div class="container">
+    <div>
         <div class="approach__decoration"></div>
         <h2 class="approach__title">
             Our design and<br>
@@ -503,6 +505,53 @@
                   <h3>Quality Assurance & Testing</h3>
                   <p>Unlike other companies, we are a <strong>UX first</strong> development company. Projects are driven by designers and they make sure design and experiences translate to code.</p>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Section our tech stacks-->
+      <section class="tech-stack">
+        <div>
+          <div class="tech-stack__decoration"></div>
+          <h2 class="tech-stack__title">
+            Our<br>
+            <strong>Tech Stack</strong>
+          </h2>
+          <nav class="tech-stack__nav">
+            <button class="tech-stack__tab tech-stack__tab--active">Backend</button>
+            <button class="tech-stack__tab">Frontend</button>
+            <button class="tech-stack__tab">Databases</button>
+            <button class="tech-stack__tab">CMS</button>
+            <button class="tech-stack__tab">CloudTesting</button>
+            <button class="tech-stack__tab">DevOps</button>
+          </nav>
+            <div class="tech-stack__logos">
+              <div class="tech-stack__logo">
+                <img src="img/stack_logos/NodeJS.svg" alt="Node.js">
+              </div>
+            <div class="tech-stack__logo">
+                <img src="img/stack_logos/php.svg" alt="PHP">
+            </div>
+            <div class="tech-stack__logo">
+                <img src="img/stack_logos/mysql.svg" alt="MySQL">
+            </div>
+            <div class="tech-stack__logo">
+                <img src="img/stack_logos/Java.svg" alt="Java">
+            </div>
+            <div class="tech-stack__logo">
+                <img src="img/stack_logos/NETcore.svg" alt=".NET Core">
+            </div>
+            <div class="tech-stack__logo">
+                <img src="img/stack_logos/Python.svg" alt="Python">
+            </div>
+            <div class="tech-stack__logo">
+                <img src="img/stack_logos/Vector.svg" alt="Rails">
+            </div>
+            <div class="tech-stack__logo">
+                <img src="img/stack_logos/go.svg" alt="Go">
+            </div>
+            <div class="tech-stack__logo">
+                <img src="img/stack_logos/mongo.svg" alt="MongoDB">
             </div>
           </div>
         </div>
