feat(add) add dev-progress section

--- a/index.html
+++ b/index.html
@@ -556,6 +556,67 @@
           </div>
         </div>
       </section>
+      <section class="dev-process">
+        <div>
+          <div class="dev-process__decoration"></div>
+            <h2 class="dev-process__title">
+            How development<br>
+            <strong>through Alcaline works</strong>
+            </h2>
+            <div class="dev-process__timeline"> 
+              <div class="dev-process__line"></div>
+                <div class="dev-process__trophy">🏆</div>
+                  <div class="dev-process__step dev-process__step--top" style="left: 0%;">
+                    <div class="dev-process__connector"></div>
+                      <div class="dev-process__card">
+                        <span class="dev-process__number">#1</span>
+                        <h3>Assemble the right team</h3>
+                        <p>We handle all aspects of vetting and choosing the right team that you don't have the time, expertise, or desire to do.</p>
+                      </div>
+                  </div>
+                  <div class="dev-process__step dev-process__step--top" style="left: 33.3%;">
+                    <div class="dev-process__connector"></div>
+                      <div class="dev-process__card">
+                        <span class="dev-process__number">#3</span>
+                          <h3>Tech architecture</h3>
+                          <p>We break monolithic apps into microservices. Decoupling the code allows teams to move faster and more independently.</p>
+                      </div>
+                  </div>
+                  <div class="dev-process__step dev-process__step--top" style="left: 66.6%;">
+                    <div class="dev-process__connector"></div>
+                      <div class="dev-process__card">
+                        <span class="dev-process__number">#5</span>
+                        <h3>Code reviews</h3>
+                        <p>Code reviews before release help detect issues like memory leaks, file leaks, performance signs, and general bad smells.</p>
+                      </div>
+                  </div>
+                  <div class="dev-process__step dev-process__step--bottom" style="left: 16.65%;">
+                    <div class="dev-process__connector"></div>
+                    <div class="dev-process__card">
+                      <span class="dev-process__number">#2</span>
+                      <h3>Sprint planning</h3>
+                      <p>Sprint roadmap is a collective planning effort. Team members collaborate to clarify items and ensure shared understanding.</p>
+                    </div>
+                  </div>           
+                  <div class="dev-process__step dev-process__step--bottom" style="left: 50%;">
+                <div class="dev-process__connector"></div>
+                <div class="dev-process__card">
+                    <span class="dev-process__number">#4</span>
+                    <h3>Standups & weekly demos</h3>
+                    <p>Standups, weekly demos, and weekly reviews make sure everyone is on the same page and can raise their concerns.</p>
+                </div>
+               </div>
+                <div class="dev-process__step dev-process__step--bottom" style="left: 83.35%;">
+                  <div class="dev-process__connector"></div>
+                    <div class="dev-process__card">
+                      <span class="dev-process__number">#6</span>
+                      <h3>Iterative delivery</h3>
+                      <p>We divide the implementation process into several checkpoints rather than a single deadline.</p>
+                    </div>
+               </div>
+            </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
